# OcrLotes

./: .replit  API_DOCUMENTATION.md  DIAGNOSTICO_ARQUITECTO_PRINCIPAL_OCR_CRITICO_20250706.txt  DIAGNOSTICO_EXHAUSTIVO_SISTEMA_OCR_EMPRESARIAL.txt  DOCUMENTACION_SISTEMA_OCR_COMPLETA.md  DOCUMENTACION_TECNICA_EXHAUSTIVA_SISTEMA_OCR_EMPRESARIAL.txt  INFORME_MANDATO_1_2_CORRECCION_LOGICA_ORO_APLICADA.txt  MIGRACION_ONNXTR.md  PROMPT_SISTEMA_OCR_EMPRESARIAL_ACTUALIZADO.txt  README.md  README_DEPLOYMENT.md  README_ONNXTR.md  REPORTE_ANALISIS_CONSISTENCIA_COMPONENTES.md  REPORTE_CORRECCION_ESPECIFICIDAD_LOTE.txt  REPORTE_CORRECCION_INTEGRIDAD_DATOS.txt  REPORTE_ESPECIFICACION_INTERFAZ_BACKEND_FRONTEND_V2_COMPLETO.md  REPORTE_FINAL_OPTIMIZACION_MEMORIA_FASE3.md  REPORTE_INTERVENCION_CRITICA_JULIO_7_2025.txt  REPORTE_MANDATOS_CRITICOS_COMPLETADOS_JULIO_7_2025.txt  REPORTE_MANDATO_15_COMPLETADO_EXITOSAMENTE.txt  REPORTE_MANDATO_7_COMPLETADO_EXITOSAMENTE.md  REPORTE_MANDATO_CRITICO_COMPLETADO_FINAL.txt  REPORTE_MANDATO_FASE2_COMPLETADO_EXITOSAMENTE.txt  REPORTE_MANDATO_MAXIMA_PRIORIDAD.txt  REPORTE_MANDATO_PARAMETROS_ESENCIALES_COMPLETADO.txt  REPORTE_OPTIMIZACION_CONTINUA_REFINAMIENTO_DATOS.txt  REPORTE_OPTIMIZACION_MEMORIA_AVANZADA.md  REPORTE_REFACTORIZACION_CONTRATOS_API.md  REPORTE_REFINAMIENTO_CRITICO_OCR.txt  UBUNTU_INSTALLATION.md  advanced_onnx_optimization.py  api_keys.json  aplicador_ocr.py  aplicador_ocr.py.backup  aplicador_ocr.py.backup_PRE_SPATIAL_INTEGRATION_20250710_054253  aplicador_ocr.py.backup_mandato_fase2  app.py  config.py  create_test_whatsapp_file.py  (+37 more)
(+2558 files in other folders)
