[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "email-validator>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "fuzzywuzzy>=0.18.0",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "numpy>=2.3.1",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "onnxtr>=0.7.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "scipy>=1.16.0",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.10",
    "markdown>=3.8.2",
]
